# learning_gtk

./: CMakeLists.txt
basics/: CMakeLists.txt
basics/src/: basic01.c  basic02.c
layout/: CMakeLists.txt
layout/src/: sample03.c  sample03.c.c  sample04.c  sample05.c  sample06.c
